Made Angular parent fields readonly; tutorial form validation working; awaiting release of https://github.com/angular/flex-layout/issues/270 in order to fxLayoutAlign center with hidden fields

--- a/SkillPath/angular/app/templates/category-list/category-list.component.css
+++ b/SkillPath/angular/app/templates/category-list/category-list.component.css
@@ -3,3 +3,8 @@
     min-width: 292px;
     max-width: 370px;
 }
+
+.hidden {
+    visibility: hidden;
+    /*display: none;*/
+}
